test/classes/bradc/arrayInClass/arrayDomInClassRecord-illegal.good
arrayDomInClassRecord-illegal.chpl:30: In function 'baz':
arrayDomInClassRecord-illegal.chpl:31: error: illegal lvalue in assignment
